--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -1,3 +1,12 @@
+.blog-post-container {
+  position: relative;
+}
+
+.bookmark-container {
+  position: sticky;
+  top: 0;
+}
+
 .box {
   width: 100%;
   border: 1px solid #ddd;
